--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,23 +1,17 @@
-<form (ngSubmit)="register()">
+<form (ngSubmit)="registrarUsuario()">
   <div class="input-container">
-    <label for="name">Nombre:</label>
-    <input type="text" id="name" [(ngModel)]="name" name="name" required />
+    <label for="nombre">Nombre:</label>
+    <input [(ngModel)]="nombre" id="nombre" name="nombre" required type="text" />
   </div>
 
   <div class="input-container">
     <label for="email">Email:</label>
-    <input type="email" id="email" [(ngModel)]="email" name="email" required />
+    <input [(ngModel)]="email" id="email" name="email" required type="email" />
   </div>
 
   <div class="input-container">
     <label for="password">Contraseña:</label>
-    <input
-      [(ngModel)]="password"
-      id="password"
-      name="password"
-      required
-      type="password"
-    />
+    <input [(ngModel)]="password" id="password" name="password" required type="password" />
   </div>
 
   <button type="submit">Registrarse</button>
